--- a/style.css
+++ b/style.css
@@ -41,6 +41,11 @@ header a:hover{
   color: #0056b3;
 }
 
+h3#header a:hover{
+  text-decoration: underline;
+  
+}
+
 main{
   margin-top: 20px;
 }
