--- a/style.css
+++ b/style.css
@@ -43,7 +43,6 @@ header a:hover{
 
 h3#header a:hover{
   text-decoration: underline;
-
 }
 
 main{
@@ -67,7 +66,18 @@ div.jumbotron {
   line-height: 40px;
 }
 
+div.questions{
+  padding: 0 20px 0 20px;
+  }
+  
+.questions h4{
+  font-size: 30px;
+  margin-bottom: 10px;
+}
 
+.questions p{
+  margin-top: 30px;
+}
 footer{
   border-top: 1px solid #ccc;
   margin-top: 80px;
