--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ div.jumbotron {
 div.questions{
   padding: 0 20px 0 20px;
   }
-  
+
 .questions h4{
   font-size: 30px;
   margin-bottom: 10px;
@@ -83,4 +83,19 @@ footer{
   margin-top: 80px;
   padding-top: 20px;
   color: #CCC;
+}
+
+div.questions a.btn{
+  border-radius: 5px;
+  color: #FFF;
+  background-color: #007bff;
+  border-color: #007bff;
+  text-decoration: none;
+  padding: 18px;
+  font-size: 20px;
+}
+
+div.questions.btn a:hover{
+  background-color: #0069d9;
+  border-color: #0069d9;
 }
