--- a/style.css
+++ b/style.css
@@ -96,6 +96,6 @@ div.questions a.btn{
 }
 
 div.questions.btn a:hover{
-  background-color: #0069d9;
+  background: #0069d9;
   border-color: #0069d9;
 }
