--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ div.questions a.btn{
   font-size: 20px;
 }
 
-div.questions.btn a:hover{
+.btn a:hover{
   background: #0069d9;
   border-color: #0069d9;
 }
